--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       "EXS": "admin",
       "Davi": "gatofino",
       "Manu": "miau123"
+      "Alice": "gatanerd"
     };
 
     function login() {
