--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -139,6 +139,13 @@
       missao: "Coadjuvante (admin do grupo)",
       status: "Em campo"
     }
+
+  "Alice": {
+      senha: "gatanerd",
+      saldo: "0,00 CATS TOKENS",
+      missao: "Participante",
+      status: "Em campo"
+    }
   };
 
   const urlParams = new URLSearchParams(window.location.search);
