--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
 
   <script>
     const users = {
-      "EXS": "admin",
-      "Davi": "gatofino",
-      "Manu": "miau123"
-      "Alice": "gatanerd"
+     const users = {
+  "EXS": "admin",
+  "Davi": "gatofino",
+  "Manu": "miau123",
+  "Alice": "gatanerd"
+};
+
     };
 
     function login() {
