--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -124,7 +124,7 @@
     "EXS": {
       senha: "admin",
       saldo: "infinito",
-      missao: "Observar movimento",
+      missao: "Liderar o Grupo",
       status: "Em campo"
     },
     "Davi": {
