--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -136,7 +136,7 @@
     "Manu": {
       senha: "miau123",
       saldo: "30.000 CATS TOKENS",
-      missao: "Coadjuvante (admin do grupo)",
+      missao: "Bancária",
       status: "Em campo"
     },
 
