--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -146,6 +146,12 @@
       missao: "Participante",
       status: "Em campo"
     },
+     "Isabella": {
+      senha: "miaumiau123",
+      saldo: "12.000 CATS TOKENS",
+      missao: "Participante",
+      status: "Em campo"
+    },
   };
 
   const urlParams = new URLSearchParams(window.location.search);
