--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   "EXS": "admin",
   "Davi": "gatofino",
   "Manu": "miau123",
-  "Alice": "gatanerd"
+  "Alice": "gatanerd",
   "Isabella": "miaumiau123"
 };
 
