--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -152,6 +152,12 @@
       missao: "Participante",
       status: "Em campo"
     },
+     "Sergio": {
+      senha: "sergiocat",
+      saldo: "12.000 CATS TOKENS",
+      missao: "Participante",
+      status: "Em campo"
+    },
   };
 
   const urlParams = new URLSearchParams(window.location.search);
