--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
   "Davi": "gatofino",
   "Manu": "miau123",
   "Alice": "gatanerd",
-  "Isabella": "miaumiau123"
-  "Sergio": "sergiocat"
+  "Isabella": "miaumiau123",
+  "Sergio": "sergiocat",
+  "Isabely": "isacat"
 };
 
   
