--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -158,6 +158,12 @@
       missao: "Participante",
       status: "Em campo"
     },
+     "Isabely": {
+      senha: "isacat",
+      saldo: "12.000 CATS TOKENS",
+      missao: "Participante",
+      status: "Em campo"
+    },
   };
 
   const urlParams = new URLSearchParams(window.location.search);
