--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
   "Alice": "gatanerd",
   "Isabella": "miaumiau123",
   "Sergio": "sergiocat",
-  "Isabely": "isacat"
+  "Isabely": "isacat",
+  "João Pedro": "jonacat",
+   "Gabriel": "gabricat",
 };
 
   
