--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -154,12 +154,24 @@
     },
      "Sergio": {
       senha: "sergiocat",
-      saldo: "12.000 CATS TOKENS",
+      saldo: "18.000 CATS TOKENS",
       missao: "Participante",
       status: "Em campo"
     },
      "Isabely": {
       senha: "isacat",
+      saldo: "12.000 CATS TOKENS",
+      missao: "Participante",
+      status: "Em campo"
+    },
+     "João Pedro": {
+      senha: "jonacat",
+      saldo: "12.000 CATS TOKENS",
+      missao: "Participante",
+      status: "Em campo"
+    }, 
+     "Gabriel": {
+      senha: "gabricat",
       saldo: "12.000 CATS TOKENS",
       missao: "Participante",
       status: "Em campo"
