--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -176,6 +176,12 @@
       missao: "Participante",
       status: "Em campo"
     },
+    "Maria Louise": {
+      senha: "maricat",
+      saldo: "12.000 CATS TOKENS",
+      missao: "Participante",
+      status: "Em campo"
+    },
   };
 
   const urlParams = new URLSearchParams(window.location.search);
