--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -122,7 +122,7 @@
     <div class="logo">CATS</div>
     <nav>
       <button onclick="logout()">Sair</button>
-      <button class="meu-botao" href="aiai.html">Acesse a Loja dos CATS!</button>
+      <a class="meu-botao" href="aiai.html">Acesse a Loja dos CATS!</a>
       <span class="user" id="user-display"></span>
     </nav>
   </header>
