--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -196,6 +196,12 @@
       missao: "Participante",
       status: "Em campo"
     },
+    "Laura Feijó": {
+      senha: "lauracatcat",
+      saldo: "0,00 CATS TOKENS",
+      missao: "Participante",
+      status: "Em campo"
+    },
   };
 
   const urlParams = new URLSearchParams(window.location.search);
