--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
    "Gabriel": "gabricat",
    "Maria Louise": "maricat",
     "Laura Feijó": "lauracat",
+    "Maria Dondoni": "maridoncat"
 };
 
   
