--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -162,7 +162,7 @@
     },
      "Isabella": {
       senha: "miaumiau123",
-      saldo: "12.000 CATS TOKENS",
+      saldo: "42.000 CATS TOKENS",
       missao: "Participante",
       status: "Em campo"
     },
@@ -198,6 +198,12 @@
     },
     "Laura Feijó": {
       senha: "lauracatcat",
+      saldo: "0,00 CATS TOKENS",
+      missao: "Participante",
+      status: "Em campo"
+    },
+     "Maria Dondoni": {
+      senha: "maridoncat",
       saldo: "0,00 CATS TOKENS",
       missao: "Participante",
       status: "Em campo"
