--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -208,6 +208,40 @@
       missao: "Participante",
       status: "Em campo"
     },
+
+    {
+  "Ana Vivian": {
+    "senha": "gatofino",
+    "saldo": "3.000 CATS TOKENS",
+    "missao": "Coadjuvante (admin do grupo)",
+    "status": "Em campo"
+  },
+  "Renata": {
+    "senha": "gatofino",
+    "saldo": "3.000 CATS TOKENS",
+    "missao": "Coadjuvante (admin do grupo)",
+    "status": "Em campo"
+  },
+  "Mary Lemos": {
+    "senha": "gatofino",
+    "saldo": "3.000 CATS TOKENS",
+    "missao": "Coadjuvante (admin do grupo)",
+    "status": "Em campo"
+  },
+  "Bento Camargos": {
+    "senha": "gatofino",
+    "saldo": "3.000 CATS TOKENS",
+    "missao": "Coadjuvante (admin do grupo)",
+    "status": "Em campo"
+  },
+  "Kiara": {
+    "senha": "gatofino",
+    "saldo": "3.000 CATS TOKENS",
+    "missao": "Coadjuvante (admin do grupo)",
+    "status": "Em campo"
+  }
+}
+
   };
 
   const urlParams = new URLSearchParams(window.location.search);
