--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -196,50 +196,56 @@
       missao: "Participante",
       status: "Em campo"
     },
-    "Laura Feijó": {
-      senha: "lauracatcat",
-      saldo: "0,00 CATS TOKENS",
-      missao: "Participante",
-      status: "Em campo"
-    },
      "Maria Dondoni": {
       senha: "maridoncat",
       saldo: "0,00 CATS TOKENS",
       missao: "Participante",
       status: "Em campo"
     },
-
-    {
   "Ana Vivian": {
-    "senha": "gatofino",
+    "senha": "estrela42",
     "saldo": "3.000 CATS TOKENS",
     "missao": "Coadjuvante (admin do grupo)",
     "status": "Em campo"
   },
   "Renata": {
-    "senha": "gatofino",
+    "senha": "pinguim33",
     "saldo": "3.000 CATS TOKENS",
     "missao": "Coadjuvante (admin do grupo)",
     "status": "Em campo"
   },
   "Mary Lemos": {
-    "senha": "gatofino",
+    "senha": "luna77",
     "saldo": "3.000 CATS TOKENS",
     "missao": "Coadjuvante (admin do grupo)",
     "status": "Em campo"
   },
   "Bento Camargos": {
-    "senha": "gatofino",
+    "senha": "dragao19",
     "saldo": "3.000 CATS TOKENS",
     "missao": "Coadjuvante (admin do grupo)",
     "status": "Em campo"
   },
   "Kiara": {
-    "senha": "gatofino",
+    "senha": "neve88",
+    "saldo": "3.000 CATS TOKENS",
+    "missao": "Coadjuvante (admin do grupo)",
+    "status": "Em campo"
+  },
+  "Maria Clara dos Santos": {
+    "senha": "solzinho55",
+    "saldo": "3.000 CATS TOKENS",
+    "missao": "Coadjuvante (admin do grupo)",
+    "status": "Em campo"
+  },
+  "Matias Camargos": {
+    "senha": "vento21",
     "saldo": "3.000 CATS TOKENS",
     "missao": "Coadjuvante (admin do grupo)",
     "status": "Em campo"
   }
+}
+
 }
 
   };
