--- a/index.html
+++ b/index.html
@@ -83,13 +83,10 @@
   "Manu": "miau123",
   "Alice": "gatanerd",
   "Isabella": "miaumiau123",
-  "Sergio": "sergiocat",
   "Isabely": "isacat",
-  "João Pedro": "jonacat",
-   "Gabriel": "gabricat",
-   "Maria Louise": "maricat",
-    "Laura Feijó": "lauracat",
-    "Maria Dondoni": "maridoncat"
+   "Giovanna": "giocat",
+   "Maria Clara": "mariacat",
+   "José Dondoni": "josecat",
 };
 
   
