--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -166,87 +166,30 @@
       missao: "Participante",
       status: "Em campo"
     },
-     "Sergio": {
-      senha: "sergiocat",
-      saldo: "21.000 CATS TOKENS",
-      missao: "Participante",
-      status: "Em campo"
-    },
      "Isabely": {
       senha: "isacat",
       saldo: "12.000 CATS TOKENS",
       missao: "Participante",
       status: "Em campo"
     },
-     "João Pedro": {
-      senha: "jonacat",
-      saldo: "18.000 CATS TOKENS",
-      missao: "Participante",
-      status: "Em campo"
-    }, 
-     "Gabriel": {
-      senha: "gabricat",
+     "Giovanna": {
+      senha: "giocat",
       saldo: "12.000 CATS TOKENS",
       missao: "Participante",
       status: "Em campo"
     },
-    "Maria Louise": {
-      senha: "maricat",
+      "Maria Clara": {
+      senha: "mariacat",
       saldo: "12.000 CATS TOKENS",
       missao: "Participante",
       status: "Em campo"
     },
-     "Maria Dondoni": {
-      senha: "maridoncat",
+      "José Dondoni": {
+      senha: "josecat",
       saldo: "0,00 CATS TOKENS",
       missao: "Participante",
       status: "Em campo"
     },
-  "Ana Vivian": {
-    "senha": "estrela42",
-    "saldo": "3.000 CATS TOKENS",
-    "missao": "Coadjuvante (admin do grupo)",
-    "status": "Em campo"
-  },
-  "Renata": {
-    "senha": "pinguim33",
-    "saldo": "3.000 CATS TOKENS",
-    "missao": "Coadjuvante (admin do grupo)",
-    "status": "Em campo"
-  },
-  "Mary Lemos": {
-    "senha": "luna77",
-    "saldo": "3.000 CATS TOKENS",
-    "missao": "Coadjuvante (admin do grupo)",
-    "status": "Em campo"
-  },
-  "Bento Camargos": {
-    "senha": "dragao19",
-    "saldo": "3.000 CATS TOKENS",
-    "missao": "Coadjuvante (admin do grupo)",
-    "status": "Em campo"
-  },
-  "Kiara": {
-    "senha": "neve88",
-    "saldo": "3.000 CATS TOKENS",
-    "missao": "Coadjuvante (admin do grupo)",
-    "status": "Em campo"
-  },
-  "Maria Clara dos Santos": {
-    "senha": "solzinho55",
-    "saldo": "3.000 CATS TOKENS",
-    "missao": "Coadjuvante (admin do grupo)",
-    "status": "Em campo"
-  },
-  "Matias Camargos": {
-    "senha": "vento21",
-    "saldo": "3.000 CATS TOKENS",
-    "missao": "Coadjuvante (admin do grupo)",
-    "status": "Em campo"
-  }
-}
-
-}
 
   };
 
