--- a/aiai.html
+++ b/aiai.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <link rel="icon" href="favicon.png" type="iconcats.png">
   <title>Loja dos CATS 🐱</title>
   <style>
     /* Reset básico */
