--- a/paginaprimaria.html
+++ b/paginaprimaria.html
@@ -190,7 +190,12 @@
       missao: "Participante",
       status: "Em campo"
     },
-
+     "Mariana Zuffo": {
+      senha: "mazucat",
+      saldo: "0,00 CATS TOKENS",
+      missao: "Participante",
+      status: "Em campo"
+    },
   };
 
   const urlParams = new URLSearchParams(window.location.search);
