--- a/aiai.html
+++ b/aiai.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
    <link rel="icon" href="iconcats.png" type="iconcats.png">
-  <title>Loja dos CATS 🐱</title>
+  <title>Loja dos CATS </title>
   <style>
     /* Reset básico */
     * {
